--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>The Gossip Project</title>
+    <title>List of Gossips</title>
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
   </head>
     <body class="bg-light-gray">
