--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome!</title>
+  <title>New Gossip</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 </head>
-  <body>
-    <h1 class="tc">Welcome <%= @name %></h1>
-  </body>
-  </html>
