--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Us</title>
-  <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 </head>
-  <body class="bg-light-gray lh-copy serif">
+  <body class="lh-copy serif">
     <main class="pa4 black-80">
       <form class="measure center">
         <fieldset id="contact" class="ba b--transparent ph0 mh0">
             <legend class="f4 fw6 ph0 mh0">Contact Us</legend>
               <div class="mt3">
                 <label class="db fw6f6" for="name">Name</label>
-                <input class="pa2 input-reset ba bg-transparent w-100 measure" type="text" name="name" id="name">
+                <input class="pa2 input-reset ba bg-transparent w-100 measure" type="text" name="name" id="name"/>
               </div>
               <div class="mt3">
                 <label class="db fw6 f6" for="email-address">Email Address</label>
@@ -24,7 +23,7 @@
               </div>
         </fieldset>
           <div class="mt4">
-            <a class="f6 link dim br3 ph3 pv2 mb2 dib white bg-black" href="mailto:team@example.com">Send Message</a>
+            <button class="f6 link dim br3 ph3 pv2 mb2 dib white bg-black" href="mailto:team@example.com">Send Message</a>
           </div>
       </form>
     </main>
