--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
-  <body class="bg-light-gray lh-copy serif">
+  <body class="lh-copy serif f5">
     <div class="mw7 center pa4">
       <h1 class="mt0 mb3 tc">About Us</h1>
-        <p class="measure center f4">
+        <p class="measure center">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis nibh nibh, sit amet ultricies enim imperdiet eu. Morbi pellentesque eros at nisl consectetur varius. Fusce nec nisi a augue venenatis feugiat. Suspendisse potenti. Sed varius elit et ipsum finibus, non iaculis nibh vehicula.
         </p>
-        <p class="measure center f4">
+        <p class="measure center">
           Nulla euismod, sem vel ullamcorper vulputate, est nulla egestas purus, quis dictum dolor mauris id nulla. Praesent nec sollicitudin purus, sed efficitur mauris. Vestibulum blandit volutpat fermentum. Donec id tristique nisi, vel pharetra sapien. Mauris interdum magna et eros finibus vestibulum.
         </p>
     </div>
