--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -2,36 +2,35 @@
 <html lang="en">
   <head>
     <title>List of Gossips</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
   </head>
-    <body class="bg-light-gray">
-        <article class="mw9 center ph3-ns">
-                <div class="pa4">
-                  <div class="overflow-auto">
-          <table class="f6 w-100 mw8 center" cellspacing="0">
-            <thead>
-                <tr>
-                  <th class="fw6 bb b--black-20 tl pb3 pr3 f3 lh-copy serif">#</th>
-                  <th class="fw6 bb b--black-20 tl pb3 pr3 f3 lh-copy serif">Author</th>
-                  <th class="fw6 bb b--black-20 tl pb3 pr3 f3 lh-copy serif">Content</th>
-                  <th class="fw6 bb b--black-20 tl pb3 pr3 f3 lh-copy serif">Created Date</th>
-                  <th class="fw6 bb b--black-20 tl pb3 pr3 f3 lh-copy serif">View</th>
-                </tr>
-            </thead>
-            <tbody class="lh-copy">
-              <% Gossip.all.sort.each_with_index do | gossip, index | %>
-                <tr>
-                  <td class="pv3 pr3 bb b--black-20 f3 lh-copy serif"><%= gossip.id %> </td>
-                  <td class="pv3 pr3 bb b--black-20 f3 lh-copy serif"><%= gossip.user.first_name %></td>
-                  <td class="pv3 pr3 bb b--black-20 f3 lh-copy serif"><%= gossip.content %></td>
-                  <td class="pv3 pr3 bb b--black-20 f3 lh-copy serif"><%= gossip.created_at %></td> 
-                  <td class="pv3 pr3 bb b--black-20 f3 lh-copy serif"><%= link_to "Details", gossip_path(gossip.id)%></td>        
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
+  <body>
+      <article class="mw9 center ph3-ns">
+        <div class="pa4">
+          <div class="overflow-auto">
+            <table class="f6 w-100 mw8 center" cellspacing="0">
+              <thead>
+                  <tr>
+                    <th class="fw6 bb b--black-20 tl pb3 pr3 f5 lh-copy serif">#</th>
+                    <th class="fw6 bb b--black-20 tl pb3 pr3 f5 lh-copy serif">Author</th>
+                    <th class="fw6 bb b--black-20 tl pb3 pr3 f5 lh-copy serif">Content</th>
+                    <th class="fw6 bb b--black-20 tl pb3 pr3 f5 lh-copy serif">Created Date</th>
+                    <th class="fw6 bb b--black-20 tl pb3 pr3 f5 lh-copy serif">View</th>
+                  </tr>
+              </thead>
+              <tbody class="lh-copy">
+                <% Gossip.all.sort.each_with_index do | gossip, index | %>
+                  <tr>
+                    <td class="pv3 pr3 bb b--black-20 f5 lh-copy serif"><%= gossip.id %> </td>
+                    <td class="pv3 pr3 bb b--black-20 f5 lh-copy serif"><%= gossip.user.first_name %></td>
+                    <td class="pv3 pr3 bb b--black-20 f5 lh-copy serif"><%= gossip.content %></td>
+                    <td class="pv3 pr3 bb b--black-20 f5 lh-copy serif"><%= gossip.created_at %></td> 
+                    <td class="pv3 pr3 bb b--black-20 f5 lh-copy serif"><%= link_to "Details", gossip_path(gossip.id)%></td>        
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
-      </div>
     </article>
   </body>
 </html> 
