--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Gossip Details</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
-  <body class="bg-light-gray">
+  <body>
     <div class="pa4">
       <div class="overflow-hidden ba br2 b--black-10 shadow-5">
         <div class="bg-white">
