update controller gossip

--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -5,7 +5,7 @@
     <title>New Gossip</title>
   </head>
   <body>
-    <%= form_tag url_for(action: 'create'), method: "post", class:"measure center" do %>   
+    <%= form_tag url_for(action: 'create'), method: "POST", class:"measure center" do %>   
       <legend class="f4 fw6 ph0 mh0">New Gossip</legend>
         <fieldset id="contact" class="ba b--transparent ph0 mh0">
           <div class="mt3">
