--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -13,7 +13,7 @@
        <%= f.submit 'Sign in', class:"b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
     </div>
     <div class="lh-copy mt3">
-      <a href="#0" class="f6 link dim black db">Sign up</a>
+      <%= link_to "Sign up", new_user_path, class:"f6 link dim black db" %>
       <a href="#0" class="f6 link dim black db">Forgot your password?</a>
     </div>
   <% end %>
