--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -14,10 +14,9 @@
           <p class="f6 f5-ns lh-copy serif">By <%=link_to Gossip.find(@id).user.first_name, user_path(Gossip.find(@id).user.id)%> | At <%=Gossip.find(@id).user.city.name%> | Created on <%=Gossip.find(@id).created_at%></p>
         </div>
     </article>
+    <%= render 'comment' %>
     <div class="mt4 tc">
       <%= link_to "Back to gossips", gossips_path, class:"f6 link dim br3 ph3 pv2 mb2 dib white bg-dark" %> 
     </div> 
-    <div>
-    </div>
   </body>
 </html>
