remove header when not logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <header>
       <%= render 'shared/flashes' %> 
     </header>
+    <% if logged_in? %>
       <%= render 'shared/navbar' %>
+    <%end%>
       <%= yield %>
     </body>
 </html>
