--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -3,10 +3,10 @@
     <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
       <legend class="f4 fw6 ph0 mh0">Sign in</legend>
       <div class="mt3">
-        <%= f.email_field :email, class:"pa2 input-reset ba bg-transparent w-100", type:"email", name:"email-address",  id:"email-address", required: true, placeholder: "Email"%>
+        <%= f.email_field :email, class:"pa2 input-reset ba bg-transparent w-100", name:"email",  required: true, placeholder: "Email"%>
       </div>
       <div class="mv3">
-        <%= f.password_field :password, class:"b pa2 input-reset ba bg-transparent w-100", type:"password", name:"password",  id:"password", required: true, minlength: 6, placeholder:"Password"%>
+        <%= f.password_field :password, class:"b pa2 input-reset ba bg-transparent w-100", type:"password", name:"password", required: true, minlength: 6, placeholder:"Password"%>
       </div>
     </fieldset>
     <div class="lh-copy mt3">
