add back button

--- a/app/views/shared/_form_register.html.erb
+++ b/app/views/shared/_form_register.html.erb
@@ -24,5 +24,8 @@
     <div class="lh-copy mt3">
       <%= form.submit 'Sign up', class: "b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
     </div>
+     <div class="lh-copy mt3">
+      <%= link_to 'Back', '/welcome', class: "b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
+    </div>
   <% end %>
 </main>
