--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -1,5 +1,5 @@
 <main class="pa4 black-80">
-  <%= form_with(url: login_path, local: true, class:"measure center") do |f|%>
+  <%= form_with url:sessions_path, method:"post", class:"measure center" do |f|%>
     <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
       <legend class="f4 fw6 ph0 mh0">Sign in</legend>
       <div class="mt3">
