--- a/app/views/shared/_form_register.html.erb
+++ b/app/views/shared/_form_register.html.erb
@@ -1,5 +1,5 @@
 <main class="pa4 black-80">
-  <%= form_with url: '/users', model: @user, method: "post" do |form| %>
+  <%= form_with model: @user, url: users_path, method: :post do |form| %>
     <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
       <legend class="f4 fw6 ph0 mh0">Sign up</legend>
       <div class="mt3">
