add back buttons

--- a/app/views/gossips/edit.html.erb
+++ b/app/views/gossips/edit.html.erb
@@ -18,6 +18,7 @@
           </div>
         </fieldset>
         <div class="mt4">
+          <%= link_to "Back", gossips_path, class:"f6 link dim br3 ph3 pv2 mb2 dib white bg-black" %> 
           <%= submit_tag "Save", class:"f6 link dim br3 ph3 pv2 mb2 dib white bg-black" %> 
         </div>  
     <% end %>
