--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,20 @@
   <header class="bg-white black-80 tc pv4 avenir">
     <h1 class="mt2 mb0 baskerville i fw1 f1">The Gossip Digest</h1>
+    <% if logged_in? %>
       <h2 class="mt2 mb0 f6 fw4 ttu tracked">Welcome <%= current_user.full_name %>!</h2>
+    <% else %>
+      <h2 class="mt2 mb0 f6 fw4 ttu tracked">Please log in or sign up</h2>
+    <% end %>
     <nav class="bt bb tc mw7 center mt4">
       <%=link_to 'Home', '/', class:'f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l'%>
       <%=link_to 'Team', team_path, class:'f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l'%>
       <%=link_to 'Create a gossip', new_gossip_path, class:'f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l'%>
       <%=link_to 'Contact', contact_path, class:'f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l'%>
-      <%= link_to("Log out", session_path(session.id), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr de vouloir vous déconnecter ?" }) %>      
+        <% if logged_in? %>
+          <%= link_to "Log out", session_path(session.id), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr de vouloir vous déconnecter ?" } %>
+        <% else %>
+          <%= link_to "Login", new_session_path, method: :get, class: "class:'f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l" %>
+          <%= link_to "Sign up", new_user_path, method: :get, class: "f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l" %>      
+        <% end %>      
     </nav>
 </header>
