--- a/app/views/shared/_form_register.html.erb
+++ b/app/views/shared/_form_register.html.erb
@@ -15,7 +15,7 @@
         <%= form.number_field :age, class: "pa2 input-reset ba bg-transparent w-100", required: true, placeholder: "Age" %>
       </div>
       <div class="mt3">
-        <%= form.label :city_id, "City:" %><br>
+        <%= form.label :city_id, "City" %><br>
         <%= form.collection_select :city_id, City.all, :id, :name, include_blank: true, class: "pa2 input-select ba bg-transparent w-100", required: true, placeholder: "City" %>
       </div>
       <div class="mt3">
@@ -27,12 +27,16 @@
       <div class="mv3">
         <%= form.password_field :password_confirmation, class: "b pa2 input-reset ba bg-transparent w-100", required: true, minlength: 6, placeholder: "Confirm Password" %>
       </div>
+       <%= form.label :remember_token do %> 
+        <%= form.check_box :remember_token %>
+        Remember me
+      <% end %>
     </fieldset>
     <div class="lh-copy mt3">
       <%= form.submit 'Sign up', class: "b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
     </div>
      <div class="lh-copy mt3">
-      <%= link_to 'Back', '/welcome', class: "b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
+      <%= link_to 'Back', root_path, class: "b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib" %>
     </div>
   <% end %>
 </main>
